@@ -1,17 +1,22 @@
 package no.vestlandetmc.BanFromClaim.utils;
 
+import lombok.Getter;
 import no.vestlandetmc.BanFromClaim.BfcPlugin;
 import org.bukkit.scheduler.BukkitRunnable;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 
 public abstract class UpdateNotification extends BukkitRunnable {
 
+	@Getter
 	private static int projectId;
+	@Getter
 	private static String latestVersion = "";
 
 	public UpdateNotification(int projectId) {
@@ -22,7 +27,8 @@ public abstract class UpdateNotification extends BukkitRunnable {
 	public void run() {
 
 		try {
-			final URL url = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + projectId);
+			final URI uri = new URI("https://api.spigotmc.org/legacy/update.php?resource=" + projectId);
+			final URL url = uri.toURL();
 			final URLConnection con = url.openConnection();
 
 			try (BufferedReader r = new BufferedReader(new InputStreamReader(con.getInputStream()))) {
@@ -33,26 +39,18 @@ public abstract class UpdateNotification extends BukkitRunnable {
 				onUpdateAvailable();
 			}
 
-		} catch (final IOException ex) {
-			ex.getStackTrace();
+		} catch (final IOException | URISyntaxException e) {
+			e.getStackTrace();
 		}
 	}
 
 	public abstract void onUpdateAvailable();
 
 	public static boolean isUpdateAvailable() {
-		return !latestVersion.equals(BfcPlugin.getInstance().getDescription().getVersion());
-	}
-
-	public static int getProjectId() {
-		return projectId;
-	}
-
-	public static String getLatestVersion() {
-		return latestVersion;
+		return !latestVersion.equals(BfcPlugin.getPlugin().getDescription().getVersion());
 	}
 
 	public static String getCurrentVersion() {
-		return BfcPlugin.getInstance().getDescription().getVersion();
+		return BfcPlugin.getPlugin().getDescription().getVersion();
 	}
 }
